[tool.poetry]
name = "light-curve-distributions"
version = "0.1.0"
description = ""
authors = ["BasDorsman"]

[tool.poetry.dependencies]
python = "^3.8"
dorado-sensitivity = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
